Source/WebCore/page/scrolling/ScrollingTree.cpp
@@ -34,6 +34,7 @@
 #include "ScrollingTreeNode.h"
 #include "ScrollingTreeState.h"
 #include <wtf/MainThread.h>
+#include <wtf/TemporaryChange.h>
 
 namespace WebCore {
 
@@ -51,6 +52,7 @@ ScrollingTree::ScrollingTree(ScrollingCoordinator* scrollingCoordinator)
     , m_mainFramePinnedToTheLeft(false)
     , m_mainFramePinnedToTheRight(false)
     , m_scrollingPerformanceLoggingEnabled(false)
+    , m_isHandlingProgrammaticScroll(false)
 {
 }
 
@@ -132,6 +134,8 @@ void ScrollingTree::commitNewTreeState(PassOwnPtr<ScrollingTreeState> scrollingT
         if (scrollingTreeState->changedProperties() & ScrollingTreeState::NonFastScrollableRegion)
             m_nonFastScrollableRegion = scrollingTreeState->nonFastScrollableRegion();
     }
+    
+    TemporaryChange<bool> changeHandlingProgrammaticScroll(m_isHandlingProgrammaticScroll, scrollingTreeState->requestedScrollPositionRepresentsProgrammaticScroll());
 
     m_rootNode->update(scrollingTreeState.get());
 
@@ -156,7 +160,7 @@ void ScrollingTree::updateMainFrameScrollPosition(const IntPoint& scrollPosition
         m_mainFrameScrollPosition = scrollPosition;
     }
 
-    callOnMainThread(bind(&ScrollingCoordinator::updateMainFrameScrollPosition, m_scrollingCoordinator.get(), scrollPosition));
+    callOnMainThread(bind(&ScrollingCoordinator::updateMainFrameScrollPosition, m_scrollingCoordinator.get(), scrollPosition, m_isHandlingProgrammaticScroll));
 }
 
 IntPoint ScrollingTree::mainFrameScrollPosition()
